@@ -80,18 +80,10 @@ UdpEchoClientHelper::UdpEchoClientHelper (Address address, uint16_t port)
   SetAttribute ("RemotePort", UintegerValue (port));
 }
 
-UdpEchoClientHelper::UdpEchoClientHelper (Ipv4Address address, uint16_t port)
+UdpEchoClientHelper::UdpEchoClientHelper (Address address)
 {
   m_factory.SetTypeId (UdpEchoClient::GetTypeId ());
-  SetAttribute ("RemoteAddress", AddressValue (Address(address)));
-  SetAttribute ("RemotePort", UintegerValue (port));
-}
-
-UdpEchoClientHelper::UdpEchoClientHelper (Ipv6Address address, uint16_t port)
-{
-  m_factory.SetTypeId (UdpEchoClient::GetTypeId ());
-  SetAttribute ("RemoteAddress", AddressValue (Address(address)));
-  SetAttribute ("RemotePort", UintegerValue (port));
+  SetAttribute ("RemoteAddress", AddressValue (address));
 }
 
 void 
